testing/tests/ui/error_file_path.stderr
error: failed to parse template source
 --> testing/templates/invalid_syntax.html:1:14
       "}"
 --> tests/ui/error_file_path.rs:4:19
  |
4 | #[template(path = "invalid_syntax.html")]
  |                   ^^^^^^^^^^^^^^^^^^^^^

error: failed to parse template source
 --> testing/templates/invalid_syntax.html:1:14
       "}"
 --> tests/ui/error_file_path.rs:8:19
  |
8 | #[template(path = "include_invalid_syntax.html")]
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: failed to parse template source
 --> testing/templates/invalid_syntax.html:1:14
       "}"
  --> tests/ui/error_file_path.rs:12:21
   |
12 | #[template(source = r#"{% extends "include_invalid_syntax.html" %}"#, ext = "txt")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
